tests/ui/consts/const-eval/assign-to-static-within-other-static.stderr
error[E0080]: could not evaluate static initializer
  --> $DIR/assign-to-static-within-other-static.rs:8:5
   |
LL |     FOO = 5;
   |     ^^^^^^^ modifying a static's initial value from another static's initializer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
